scss/common/_topic-post.scss
/* ... */
.topic-footer-main-buttons {
  flex-wrap: wrap;
}

.topic-map {
  background-color: transparent;
  border: 0;
  margin: 0;
  position: relative;

  h3 {
    @extend %typography-h6;

    color: color-chooser($card-color-dark, $card-color-light);
    margin-bottom: ($card-inner-spacer-y / 2);
  }

  h4 {
    @extend %typography-caption;

    color: color-chooser($card-color-dark, $card-color-light);
    margin: 0 0 ($card-inner-spacer-y / 2 / 2);
  }

  section {
    border-top: 0;

    &.avatars,
    &.links,
    &.map {
      border-top: 1px solid color-chooser($white-divider, $black-divider);
    }
  }

  .avatar {
    height: $btn-height;
    margin-right: $card-inner-spacer-x;
    width: $btn-height;
  }

  .avatars {
    padding: $card-padding-y $card-padding-x ($card-padding-y - $card-inner-spacer-y / 2);

    > div {
      margin: 0 0 ($card-inner-spacer-y / 2);
    }

    .post-count {
      @extend %typography-caption;

      align-items: center;
      border-radius: ($btn-height / 4);
      display: flex;
      height: ($btn-height / 2);
      padding: 0 ($card-inner-spacer-x / 2);
      top: ($btn-height / 2 / -4);
      right: ($card-inner-spacer-x / 2);
    }
  }

  .buttons {
    position: absolute;
    top: (($btn-height + $card-inner-spacer-y / 2) * -1);
    right: 0;
    z-index: 2;

    .btn {
      @extend %btn-flat;
      @extend %btn-footer;
    }
  }

  .information {
    @extend %card-block;

    background-color: color-chooser($card-child-bg-dark, $card-child-bg-light);

    .btn {
      @extend %btn-footer;
    }

    .controls {
      margin-right: ($card-inner-spacer-x * -1);
      margin-left: ($card-inner-spacer-x * -1);
    }
  }

  .links {
    padding: $card-padding-y $card-padding-x ($card-padding-y / 2);
  }

  .link-summary {
    margin-right: ($card-inner-spacer-x / -2);
    margin-left: ($card-inner-spacer-x / -2);

    a {
      @extend %btn-flat;
      @extend %btn-footer;
    }
  }

  .map {
    padding: 0 ($card-padding-x - $card-inner-spacer-x);

    a {
      line-height: 1;
      vertical-align: middle;
    }

    li {
      padding: $card-inner-spacer-y $card-inner-spacer-x;

      &:nth-child(3),
      &.secondary {
        display: flex;
        flex-direction: column-reverse;
      }
    }

    ul {
      align-items: center;
      display: flex;
      flex-wrap: wrap;
    }

    .avatar {
      height: ($font-size-base * $line-height-base);
      width: ($font-size-base * $line-height-base);
    }

    .number {
      font-size: ($font-size-base * $line-height-base);
      line-height: 1;
      margin-top: 1px;
    }
  }

  .map-collapsed {
    display: none;
  }

  .participants {
    .user {
      align-items: center;
      background-color: color-chooser($chip-bg-dark, $chip-bg-light);
      border-radius: ($chip-height / 2);
      color: inherit;
      display: flex;
      font-size: $font-size-small;
      height: $chip-height;
      margin: ($card-inner-spacer-y / 2) $card-inner-spacer-x ($card-inner-spacer-y / 2) 0;
      padding: 0 $chip-padding-x 0 ($chip-height + $chip-inner-spacer-x);
      position: relative;

      a {
        color: inherit;
        font-size: inherit;
        font-weight: normal;
      }

      .avatar {
        height: $chip-height;
        position: absolute;
        top: 0;
        left: 0;
        width: $chip-height;
      }

      .remove-invited {
        margin-left: $chip-inner-spacer-x;

        .fa-times {
          color: color-chooser($chip-icon-color-dark, $chip-icon-color-light);
          margin-right: ($chip-inner-spacer-x - $chip-padding-x);
        }
      }
    }
  }

  .topic-links {
    .badge-notification {
      margin: 0 $card-inner-spacer-x 0 0;
    }

    span {
      &.domain {
        font-size: $font-size-small;
      }
    }

    td {
      padding: 0 0 ($card-inner-spacer-y / 2);
    }

    .topic-link {
      margin-right: $card-inner-spacer-x;
    }
  }
}

.topic-meta-data {
  @extend %card-block;

  align-items: center;
  display: flex;
  min-height: ($card-avatar-size + $card-padding-y);
  padding-right: ($card-padding-y / 2);
  padding-bottom: 0;
  padding-left: ($card-avatar-size + $card-inner-spacer-y + $card-padding-y);

  .names {
    float: none;
    margin-right: auto;

    span {
      display: block;
      font-size: inherit;
      max-width: none;
      padding-right: $card-inner-spacer-x;

      a {
        color: unquote('$primary');

        @include focus-hover {
          color: unquote('$primary');
        }
      }
    }
  }

  .post-info {
    display: block;
    float: none;
    font-size: inherit;
    margin-top: 0;
    order: 1;

    &.edits {
      margin-right: 0;
      order: 0;
    }

    a {
      @extend %btn-flat;

      color: color-chooser($white-secondary, $black-secondary);
      font-size: $btn-font-size-sm;
      padding: $btn-padding-y-sm $card-inner-spacer-x;
    }
  }
}

#topic-progress {
  flex-shrink: 0;
  height: $btn-height;
}

#topic-progress-wrapper {
  box-shadow: $card-box-shadow;
  display: flex;
  margin-right: auto;
  right: 0;
  width: auto;

  &.docked {
    margin-bottom: $spacer;
    right: 0;

    .topic-admin-popup-menu {
      &.left-side,
      &.right-side {
        right: 0;
      }
    }
  }

  .popup-menu {
    @extend %dropdown-menu-sm;

    h3 {
      @extend %dropdown-header-sm;
    }

    .btn {
      @extend %dropdown-link-sm;
    }
  }

  .topic-admin-menu-button-container {
    background-color: unquote('$secondary');
    top: auto;
    right: auto;

    .toggle-admin-menu.widget-button {
      border-right: 0;
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
      height: auto;

      .fa {
        vertical-align: top;
      }
    }
  }

  .topic-admin-popup-menu {
    &.left-side,
    &.right-side {
      position: absolute;
      right: 0;
      bottom: 0;
    }
  }
}
/* ... */

